--- a/app/views/admin/users/index.handlebars
+++ b/app/views/admin/users/index.handlebars
@@ -11,7 +11,7 @@
             </div>
             <div class="box-body">
                 <table class="table">
-                    <theat class="theat-dark">
+                    <thead class="thead-dark">
                         <tbody class="co-tb-sp">
                             <tr>
                             <th>#</th>
@@ -22,7 +22,7 @@
                             <th>عملیات</th>
                         </tr>
                         </tbody>
-                    </theat>
+                    </thead>
                     <tbody>
                         {{#each users}}
                         <tr>
